human_written_tests/WebAssembly/processed_control_flow_validation/test_br_if_29.wast
(assert_invalid
  (module (func $large-label (br_if 0x10000001 (i32.const 1))))
  "unknown label"
)